# odoo-lab

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/oolab/: __init__.py  cli.py  config.py  console.py  parsers.py  progress.py  scaffold.py  streaming.py  utils.py  venv.py  versions.py
src/oolab/commands/: _resolver.py  add.py  doctor.py  generate.py  init.py  list.py  logs.py  module_install.py  module_update.py  open_shell.py  remove.py  repair.py  reset_pwd.py  start.py  status.py  stop.py
src/oolab/templates/: README.md.j2  docker-compose.yaml.j2  env.j2  gitignore.j2  launch.json.j2  nginx.conf.j2  odoo.conf.j2  settings.json.j2  tasks.json.j2
wiki/: Comandos.md  Contribuir.md  Enterprise.md  Estructura-del-Workspace.md  FAQ.md  Home.md  Instalacion.md  Quick-Start.md
