[project]
name = "odoo-lab"
version = "0.3.4"
description = "CLI for multi-project, multi-version Odoo development workspaces"
requires-python = ">=3.10"
license = "LGPL-3.0-or-later"
readme = "README.md"
authors = [
    { name = "Yan Chirino", email = "yan.chirino@iku.solutions" },
]
maintainers = [
    { name = "IKU Solutions SAS", email = "info@iku.solutions" },
]
keywords = ["odoo", "erp", "development", "scaffolder", "cli", "workspace"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Odoo",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://www.iku.solutions"
Repository = "https://github.com/ikusolutions/odoo-lab"
Issues = "https://github.com/ikusolutions/odoo-lab/issues"

[project.scripts]
oolab = "oolab.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oolab"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/oolab/cli.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["oolab"]
